# LowTechFilter

./: .gitignore  CNAME  LICENSE  README.en.md  README.md  TW165-redirect.txt  TW165.txt  TWNIC-RPZ.txt  TWNIC-RPZ_adb.txt  domains.txt  experimental.txt  filter.txt  hide_farm_from_search.txt  hide_farm_from_search_ff.txt  hosts.txt  nofarm.txt  nofarm_hosts.txt  removeparam.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ------.md  update filter
.github/workflows/: 280blocker.yml  auto_newversion.yml  autoclose.yml  gen_nofarm.yml  pure_domain.yml  tw165.yml  twnic_rpz.yml  twnic_rpz_1.0.yml
280blocker/: 280blocker_adblock.txt  280blocker_domain_ag.txt
AdGuard Home/: filter.txt
AutoBuild/: Cargo.toml  auto_update_version.py  build.sh  builder.py  go.mod  go.sum  hide_farm.py  main.go  main.rs  nrdlist.py  pure_domain.py  requirements.txt  tw_165.py  twnic_rpz.py  twnic_rpz_1.0.py  whitelist.py
PureView/: news.txt  news_mobile.txt
Surge/: biggo.sgmodule  check_futadns.js  check_futadns.sgmodule  filters.txt  futadns.sgmodule
