[package]
name = "AutoBuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.10.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
time = "0.3.14"
chrono = "0.4.22"

[[bin]]
name = "AutoBuild"
path = "main.rs"
